--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
   },
   "homepage": "https://github.com/threefourth/threefourth#readme",
   "dependencies": {
+    "babel-cli": "^6.10.1",
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "cors": "^2.7.1",
-    "express": "^4.14.0",
+    "express": "4.14.0",
     "express-session": "^1.14.0",
     "live-server": "^1.0.0",
     "mongoose": "^4.5.6",
@@ -34,11 +36,9 @@
     "react-audio-player": "^0.1.3",
     "react-dom": "^15.2.1",
     "react-router": "^2.6.0",
-    "socket.io": "^1.4.8",
+    "socket.io": "1.4.8",
     "socket.io-client": "^1.4.8",
-    "webpack": "^1.13.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-cli": "^6.10.1"
+    "webpack": "^1.13.1"
   },
   "devDependencies": {
     "babel-preset-react": "^6.11.1",
